[metadata]
name = heat-tempest-plugin
summary = OpenStack Orchestration (Heat) Integration Tests
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/heat/
classifier =
    Environment :: OpenStack
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Internet :: Orchestration

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    heat_integrationtests

[entry_points]
tempest.test_plugins =
    heat = heat_integrationtests.plugin:HeatTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
